HSEARCH-4632 Test against JDK 20 (early access)